--- a/Test.html
+++ b/Test.html
@@ -3,16 +3,31 @@
 <head>
     <title>TMDB Movie Trailers</title>
     <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+        #trailer {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
         #poster {
             position: absolute;
             bottom: 0;
             left: 0;
+            width: 200px;
         }
     </style>
 </head>
 <body>
-    <iframe id="trailer" width="560" height="315" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    <img id="poster" width="200" />
+    <iframe id="trailer" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <img id="poster" />
     <script>
         var page = 1;
         var apiKey = '194d885d6be15594b97e2d1f3b2526be';
@@ -37,7 +52,7 @@
                 .then(data => {
                     var trailer = data.results.find(video => video.site === 'YouTube' && video.type === 'Trailer');
                     if (trailer) {
-                        trailerPlayer.src = `https://www.youtube.com/embed/${trailer.key}?autoplay=1`;
+                        trailerPlayer.src = `https://www.youtube.com/embed/${trailer.key}?autoplay=1&mute=1&controls=0&showinfo=0`;
                         poster.src = `https://image.tmdb.org/t/p/w500${movie.poster_path}`;
                     } else {
                         playNextTrailer();
