--- a/Test.html
+++ b/Test.html
@@ -34,49 +34,42 @@
         var baseUrl = 'https://api.themoviedb.org/3';
         var trailerPlayer = document.getElementById('trailer');
         var poster = document.getElementById('poster');
-        var movies = [];
-        var currentMovie = 0;
-        var currentTrailer = 0;
-        var trailerDuration = 60000; // 1 minute in milliseconds
+        var trailers = [];
 
         function fetchMovies() {
             return fetch(`${baseUrl}/discover/movie?api_key=${apiKey}&region=US,GB&year=1985&page=${page}`)
                 .then(response => response.json())
                 .then(data => {
-                    movies = movies.concat(data.results);
-                    page++;
+                    var moviePromises = data.results.map(movie =>
+                        fetch(`${baseUrl}/movie/${movie.id}/videos?api_key=${apiKey}`)
+                            .then(response => response.json())
+                            .then(data => {
+                                var youtubeTrailers = data.results.filter(video => video.site === 'YouTube' && video.type === 'Trailer');
+                                youtubeTrailers.forEach(trailer => {
+                                    trailers.push({
+                                        key: trailer.key,
+                                        poster: `https://image.tmdb.org/t/p/w500${movie.poster_path}`
+                                    });
+                                });
+                            })
+                    );
+                    return Promise.all(moviePromises).then(() => { page++; });
                 });
         }
 
-        function fetchTrailers(movie) {
-            return fetch(`${baseUrl}/movie/${movie.id}/videos?api_key=${apiKey}`)
-                .then(response => response.json())
-                .then(data => {
-                    return data.results.filter(video => video.site === 'YouTube' && video.type === 'Trailer');
-                });
-        }
-
-        function playTrailer(trailers) {
-            if (currentTrailer < trailers.length) {
-                var trailer = trailers[currentTrailer++];
+        function playNextTrailer() {
+            if (trailers.length > 0) {
+                var trailerIndex = Math.floor(Math.random() * trailers.length);
+                var trailer = trailers.splice(trailerIndex, 1)[0];
                 trailerPlayer.src = `https://www.youtube.com/embed/${trailer.key}?autoplay=1&mute=1&controls=0&showinfo=0`;
-                setTimeout(() => playTrailer(trailers), trailerDuration);
+                poster.src = trailer.poster;
             } else {
-                playNextMovie();
+                fetchMovies().then(playNextTrailer);
             }
         }
 
-        function playNextMovie() {
-            if (currentMovie < movies.length) {
-                var movie = movies[currentMovie++];
-                poster.src = `https://image.tmdb.org/t/p/w500${movie.poster_path}`;
-                fetchTrailers(movie).then(playTrailer);
-            } else {
-                fetchMovies().then(playNextMovie);
-            }
-        }
-
-        fetchMovies().then(playNextMovie);
+        trailerPlayer.addEventListener('ended', playNextTrailer);
+        fetchMovies().then(playNextTrailer);
     </script>
 </body>
 </html>
