--- a/Test.html
+++ b/Test.html
@@ -1,77 +1,461 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
+
 <head>
-    <title>TMDB Movie Trailers</title>
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
-        #trailer {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-        #poster {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 200px;
-        }
-    </style>
+
+  <meta charset="UTF-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Moogle v2</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+  <style>
+
+    body {
+
+      font-family: 'Roboto', sans-serif;
+
+      margin: 0;
+
+      padding: 0;
+
+      background-color: #202124; /* Dark color scheme */
+
+      color: #fff;
+
+    }
+
+    .container {
+
+      max-width: 800px; /* Adjust maximum width for responsiveness */
+
+      margin: 20px auto;
+
+      padding: 20px;
+
+      background-color: #303136; /* Dark color scheme */
+
+      border-radius: 8px;
+
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+    }
+
+    input[type="text"] {
+
+      width: 100%;
+
+      padding: 10px;
+
+      margin-bottom: 10px;
+
+      border: 1px solid #ccc;
+
+      border-radius: 4px;
+
+      box-sizing: border-box;
+
+    }
+
+    .movies {
+
+      display: grid;
+
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+
+      gap: 10px;
+
+    }
+
+    .movie-poster {
+
+      position: relative;
+
+      width: 100%;
+
+      cursor: pointer;
+
+    }
+
+    .play-button {
+
+      position: absolute;
+
+      top: 50%;
+
+      left: 50%;
+
+      transform: translate(-50%, -50%);
+
+      background-color: rgba(255, 255, 255, 0.8);
+
+      border: none;
+
+      border-radius: 50%;
+
+      width: 60px;
+
+      height: 60px;
+
+      display: flex;
+
+      align-items: center;
+
+      justify-content: center;
+
+      cursor: pointer;
+
+    }
+
+    .play-button i {
+
+      font-size: 24px;
+
+      color: #333;
+
+    }
+
+    .toggle-button {
+
+      display: none; /* Hide by default */
+
+      position: fixed;
+
+      bottom: 20px;
+
+      right: 20px;
+
+      background-color: #fff;
+
+      color: #333;
+
+      border: none;
+
+      border-radius: 50%;
+
+      padding: 10px;
+
+      font-size: 16px;
+
+      cursor: pointer;
+
+    }
+
+    iframe {
+
+      width: 100%;
+
+      height: 450px;
+
+    }
+
+    .spinner {
+
+      border: 4px solid rgba(255, 255, 255, 0.3);
+
+      border-top: 4px solid #fff;
+
+      border-radius: 50%;
+
+      width: 30px;
+
+      height: 30px;
+
+      animation: spin 1s linear infinite;
+
+      position: absolute;
+
+      top: 50%;
+
+      left: 50%;
+
+      transform: translate(-50%, -50%);
+
+      display: none; /* Initially hidden */
+
+    }
+
+    .pagination {
+
+      margin-top: 20px;
+
+      text-align: center;
+
+    }
+
+    .pagination button {
+
+      background-color: #fff;
+
+      color: #333;
+
+      border: none;
+
+      border-radius: 4px;
+
+      padding: 5px 10px;
+
+      margin: 0 5px;
+
+      cursor: pointer;
+
+    }
+
+  </style>
+
 </head>
+
 <body>
-    <iframe id="trailer" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    <img id="poster" />
-    <script>
-        var page = 1;
-        var apiKey = '194d885d6be15594b97e2d1f3b2526be';
-        var baseUrl = 'https://api.themoviedb.org/3';
-        var trailerPlayer = document.getElementById('trailer');
-        var poster = document.getElementById('poster');
-        var trailers = [];
 
-        function fetchMovies() {
-            return fetch(`${baseUrl}/discover/movie?api_key=${apiKey}&region=US,GB&year=1985&page=${page}`)
-                .then(response => response.json())
-                .then(data => {
-                    var moviePromises = data.results.map(movie =>
-                        fetch(`${baseUrl}/movie/${movie.id}/videos?api_key=${apiKey}`)
-                            .then(response => response.json())
-                            .then(data => {
-                                var youtubeTrailers = data.results.filter(video => video.site === 'YouTube' && video.type === 'Trailer');
-                                youtubeTrailers.forEach(trailer => {
-                                    trailers.push({
-                                        key: trailer.key,
-                                        poster: `https://image.tmdb.org/t/p/w500${movie.poster_path}`
-                                    });
-                                });
-                            })
-                    );
-                    return Promise.all(moviePromises).then(() => { page++; });
-                });
-        }
+<div class="container" id="container">
 
-        function playNextTrailer() {
-            if (trailers.length > 0) {
-                var trailerIndex = Math.floor(Math.random() * trailers.length);
-                var trailer = trailers.splice(trailerIndex, 1)[0];
-                trailerPlayer.src = `https://www.youtube.com/embed/${trailer.key}?autoplay=1&mute=1&controls=0&showinfo=0`;
-                poster.src = trailer.poster;
-            } else {
-                fetchMovies().then(playNextTrailer);
-            }
-        }
+  <h2>Moogle v2</h2>
 
-        trailerPlayer.addEventListener('ended', function() {
-            location.reload();
-        });
-        fetchMovies().then(playNextTrailer);
-    </script>
+  <input type="text" id="yearInput" placeholder="Enter a year (e.g., 2022)">
+
+  <input type="text" id="titleInput" placeholder="Enter a movie title">
+
+  <div class="movies" id="movies"></div>
+
+  <div class="spinner" id="spinner"></div>
+
+  <div class="pagination" id="pagination"></div>
+
+</div>
+
+<script>
+
+  const apiKey = '194d885d6be15594b97e2d1f3b2526be';
+
+  let currentPage = 1;
+
+  let totalPages = 0;
+
+  let currentYear = '';
+
+  document.getElementById('yearInput').addEventListener('input', searchMovies);
+
+  document.getElementById('titleInput').addEventListener('input', searchMovies);
+
+  async function searchMovies() {
+
+    const year = document.getElementById('yearInput').value;
+
+    const title = document.getElementById('titleInput').value;
+
+    currentYear = year; // Store current year for pagination
+
+    showSpinner(); // Show spinner when searching
+
+    let url = `https://api.themoviedb.org/3/discover/movie?api_key=${apiKey}&region=US,UK&page=1`;
+
+    if (year.match(/^\d{4}$/)) {
+
+      url += `&primary_release_year=${year}`;
+
+    }
+
+    if (title.trim() !== '') {
+
+      url += `&query=${encodeURIComponent(title)}`;
+
+    }
+
+    const response = await fetch(url);
+
+    const data = await response.json();
+
+    totalPages = data.total_pages;
+
+    displayMovies(data.results);
+
+    hideSpinner(); // Hide spinner when movies are loaded
+
+    renderPagination();
+
+  }
+
+  async function loadNextPage() {
+
+    if (currentPage < totalPages) {
+
+      currentPage++;
+
+      showSpinner(); // Show spinner when loading next page
+
+      const response = await fetch(`https://api.themoviedb.org/3/discover/movie?api_key=${apiKey}&primary_release_year=${currentYear}&region=US,UK&page=${currentPage}`);
+
+      const data = await response.json();
+
+      displayMovies(data.results);
+
+      hideSpinner(); // Hide spinner when movies are loaded
+
+      renderPagination();
+
+    }
+
+  }
+
+  async function loadPreviousPage() {
+
+    if (currentPage > 1) {
+
+      currentPage--;
+
+      showSpinner(); // Show spinner when loading previous page
+
+      const response = await fetch(`https://api.themoviedb.org/3/discover/movie?api_key=${apiKey}&primary_release_year=${currentYear}&region=US,UK&page=${currentPage}`);
+
+      const data = await response.json();
+
+      displayMovies(data.results);
+
+      hideSpinner(); // Hide spinner when movies are loaded
+
+      renderPagination();
+
+    }
+
+  }
+
+  async function displayMovies(movies) {
+
+    const moviesContainer = document.getElementById('movies');
+
+    moviesContainer.innerHTML = '';
+
+    movies.forEach(movie => {
+
+      const posterPath = movie.poster_path ? `https://image.tmdb.org/t/p/w185${movie.poster_path}` : 'https://via.placeholder.com/185x278?text=No+Poster';
+
+      const movieElement = document.createElement('div');
+
+      movieElement.classList.add('movie-poster');
+
+      movieElement.style.position = 'relative';
+
+      movieElement.innerHTML = `
+
+        <img src="${posterPath}" alt="${movie.title}" onclick="showMovieDetails('${movie.id}')">
+
+      `;
+
+      moviesContainer.appendChild(movieElement);
+
+    });
+
+  }
+
+  async function showMovieDetails(movieId) {
+
+    const response = await fetch(`https://api.themoviedb.org/3/movie/${movieId}?api_key=${apiKey}&append_to_response=videos`);
+
+    const data = await response.json();
+
+    const trailer = data.videos.results.find(video => video.type === 'Trailer' && video.site === 'YouTube');
+
+    const movieDetails = document.createElement('div');
+
+    movieDetails.innerHTML = `
+
+      <h3>${data.title}</h3>
+
+      <p>${data.overview}</p>
+
+      <button class="play-button" onclick="openIframe('${movieId}')"><i class="fas fa-play"></i></button>
+
+    `;
+
+    if (trailer) {
+
+      const trailerUrl = `https://www.youtube.com/embed/${trailer.key}`;
+
+      movieDetails.innerHTML += `<iframe width="560" height="315" src="${trailerUrl}" frameborder="0" allowfullscreen></iframe>`;
+
+    }
+
+    const container = document.getElementById('container');
+
+    container.innerHTML = ''; // Clear existing content
+
+    container.appendChild(movieDetails);
+
+  }
+
+  function openIframe(movieId) {
+
+    const iframeUrl = `https://vidsrc.me/embed/${movieId}`;
+
+    const iframe = document.createElement('iframe');
+
+    iframe.src = iframeUrl;
+
+    iframe.width = '100%';
+
+    iframe.height = '100%';
+
+    iframe.allowFullscreen = true;
+
+    const container = document.getElementById('container');
+
+    container.innerHTML = ''; // Clear existing content
+
+    container.appendChild(iframe);
+
+  }
+
+  function showSpinner() {
+
+    document.getElementById('spinner').style.display = 'block';
+
+  }
+
+  function hideSpinner() {
+
+    document.getElementById('spinner').style.display = 'none';
+
+  }
+
+  function renderPagination() {
+
+    const paginationContainer = document.getElementById('pagination');
+
+    paginationContainer.innerHTML = '';
+
+    const prevButton = document.createElement('button');
+
+    prevButton.innerText = 'Previous';
+
+    prevButton.addEventListener('click', loadPreviousPage);
+
+    paginationContainer.appendChild(prevButton);
+
+    const nextButton = document.createElement('button');
+
+    nextButton.innerText = 'Next';
+
+    nextButton.addEventListener('click', loadNextPage);
+
+    paginationContainer.appendChild(nextButton);
+
+  }
+
+</script>
+
 </body>
+
 </html>
+
+dth = '100%';
+
+    iframe.height = '100%';
+
+    iframe.allowFullscreen = true;
+
+    const container = document.getElementById('container');
+
+    container.innerHTML = ''; 
